--- a/portfolio.html
+++ b/portfolio.html
@@ -962,6 +962,21 @@
         .cube-face:nth-child(4) { transform: rotateY(-90deg) translateZ(175px); }
         .cube-face:nth-child(5) { transform: rotateX(90deg) translateZ(175px); }
         .cube-face:nth-child(6) { transform: rotateX(-90deg) translateZ(175px); }
+
+        .typing-bar {
+            display: inline-block;
+            width: 2px;
+            height: 1em;
+            background: var(--primary);
+            margin-left: 2px;
+            vertical-align: middle; /* <-- Change from bottom to middle */
+            animation: blink-bar 1s steps(1) infinite;
+            border-radius: 1px;
+        }
+        @keyframes blink-bar {
+            0%, 50% { opacity: 1; }
+            51%, 100% { opacity: 0; }
+        }
     </style>
 </head>
 <body>
@@ -1011,7 +1026,7 @@
                 <!-- Title with cube behind -->
                 <div style="position: relative; z-index: 2; margin-left: 2.5rem;">
                     <!-- Cube behind title, slightly to the right and moved down -->
-                    <div style="position: absolute; left: 120px; top: 375%; transform: translateY(-50%); z-index: 1; opacity: 0.35; pointer-events: none;">
+                    <div style="position: absolute; left: 120px; top: 225%; transform: translateY(-50%); z-index: 1; opacity: 0.35; pointer-events: none;">
                         <div class="cube-container" style="width: 350px; height: 350px; perspective: 1200px;">
                             <div class="cube">
                                 <div class="cube-face"></div>
@@ -1023,9 +1038,11 @@
                             </div>
                         </div>
                     </div>
-                    <div class="hero-title" style="text-align: left; font-size: 2.2rem; margin: 0; position: relative; z-index: 2; white-space: nowrap;">
-                        CS @ Clemson
+                    <div class="hero-title" style="text-align: left; font-size: 2rem; margin: 0; position: relative; z-index: 2; white-space: nowrap;">
+                        CS, AI, Cybersecurity @ Clemson University
                     </div>
+                    <!-- Typing animation below the title -->
+                    <div id="typing-animation" style="margin-left: 0; margin-top: 1.2rem; font-size: 2rem; color: var(--primary); font-weight: 700; min-height: 2.2rem; text-align: left; letter-spacing: 0.5px;"></div>
                 </div>
             </div>
             <!-- Right: Headshot Image (much bigger, with placeholder) -->
@@ -1242,6 +1259,41 @@
             alert('Thank you for reaching out! I will get back to you soon.');
             this.reset();
         });
+
+        // Typing animation
+        const typingPhrases = [
+            "First-Generation Student",
+            "Full-Stack Developer",
+            "Clemson Tiger"
+        ];
+        const typingElement = document.getElementById('typing-animation');
+        let typingIndex = 0, charIndex = 0, isDeleting = false;
+
+        function type() {
+            const currentPhrase = typingPhrases[typingIndex];
+            let displayText;
+            if (isDeleting) {
+                displayText = currentPhrase.substring(0, charIndex - 1);
+                charIndex--;
+            } else {
+                displayText = currentPhrase.substring(0, charIndex + 1);
+                charIndex++;
+            }
+            typingElement.innerHTML = displayText + '<span class="typing-bar"></span>';
+
+            let typeSpeed = isDeleting ? 50 : 90;
+
+            if (!isDeleting && charIndex === currentPhrase.length) {
+                typeSpeed = 1200; // Pause at end
+                isDeleting = true;
+            } else if (isDeleting && charIndex === 0) {
+                isDeleting = false;
+                typingIndex = (typingIndex + 1) % typingPhrases.length;
+                typeSpeed = 500;
+            }
+            setTimeout(type, typeSpeed);
+        }
+        if (typingElement) type();
     </script>
 </body>
 </html>
