--- a/portfolio.html
+++ b/portfolio.html
@@ -680,6 +680,51 @@
             animation: pulse 2s infinite;
         }
 
+        /* Add this to your <style> section for improved experience meta styling */
+        .timeline-content h4 {
+            font-size: 1.35rem;
+            font-weight: 900;
+            color: var(--primary);
+            margin-bottom: 0.3rem;
+            letter-spacing: 0.5px;
+            text-shadow: 0 2px 12px rgba(99,102,241,0.10);
+        }
+
+        .timeline-meta {
+            margin-bottom: 1rem;
+            font-size: 1.02rem;
+            display: flex;
+            flex-wrap: wrap;
+            gap: 0.5rem 1.5rem;
+            align-items: center;
+        }
+
+        .timeline-meta .company {
+            color: var(--secondary);
+            font-weight: 700;
+            letter-spacing: 0.03em;
+        }
+
+        .timeline-meta .location {
+            color: var(--accent);
+            font-weight: 600;
+            font-size: 0.98em;
+            display: flex;
+            align-items: center;
+            gap: 0.3em;
+        }
+
+        .timeline-meta .date {
+            color: var(--text);
+            font-size: 0.97em;
+            font-weight: 500;
+            background: rgba(99,102,241,0.08);
+            border-radius: 8px;
+            padding: 0.15em 0.7em;
+            margin-left: 0.2em;
+            letter-spacing: 0.01em;
+        }
+
         /* Contact - Futuristic Form */
         .contact-container {
             max-width: 800px;
@@ -1140,7 +1185,11 @@
                 <div class="timeline-dot"></div>
                 <div class="timeline-content">
                     <h4>AI Research Assistant</h4>
-                    <p><strong>Clemson University - Watt AI Program</strong> | Aug. 2025–Present | Clemson, SC</p>
+                    <div class="timeline-meta">
+                        <span class="company">Clemson University - Watt AI Program</span>
+                        <span class="date">Aug. 2025–Present</span>
+                        <span class="location">📍 Clemson, SC</span>
+                    </div>
                     <p>
                         Selected to join a multidisciplinary AI research initiative, working on a dedicated project team to solve high-impact, real-world problems using artificial intelligence and machine learning.
                     </p>
@@ -1149,8 +1198,12 @@
             <div class="timeline-item">
                 <div class="timeline-dot"></div>
                 <div class="timeline-content">
-                    <h4>Teaching Assistant</h4>
-                    <p><strong>Clemson University - School of Computing</strong> | Aug. 2025–Present | Clemson, SC</p>
+                    <h4>Undergraduate Teaching Assistant</h4>
+                    <div class="timeline-meta">
+                        <span class="company">Clemson University - School of Computing</span>
+                        <span class="date">Aug. 2025–Present</span>
+                        <span class="location">📍 Clemson, SC</span>
+                    </div>
                     <p>
                         Selected to instruct a weekly lab section of 20 students for a Python programming course.
                     </p>
@@ -1160,7 +1213,11 @@
                 <div class="timeline-dot"></div>
                 <div class="timeline-content">
                     <h4>Privacy Compliance Research Assistant</h4>
-                    <p><strong>Clemson University - Creative Inquiry</strong> | Jan. 2025–May 2025 | Clemson, SC</p>
+                    <div class="timeline-meta">
+                        <span class="company">Clemson University - Creative Inquiry</span>
+                        <span class="date">Jan. 2025–May 2025</span>
+                        <span class="location">📍 Clemson, SC</span>
+                    </div>
                     <p>
                         Conducted an extensive review on privacy labels and their effectiveness in ensuring transparency and compliance with regulations like GDPR, CCPA, and CalOPPA.
                         Analyzed 14 research papers on privacy policies, data collection disclosures, and regulatory compliance in appified ecosystems to assess their impact on privacy transparency and user protection.
@@ -1172,7 +1229,11 @@
                 <div class="timeline-dot"></div>
                 <div class="timeline-content">
                     <h4>Motel Receptionist</h4>
-                    <p><strong>The Night Inn</strong> | May 2020–Aug. 2024 | Union, SC</p>
+                    <div class="timeline-meta">
+                        <span class="company">The Night Inn</span>
+                        <span class="date">May 2020–Aug. 2024</span>
+                        <span class="location">📍 Union, SC</span>
+                    </div>
                     <p>
                         Greeted and assisted over 48 guests weekly with check-in, check-out, and reservations, ensuring a seamless and welcoming experience that contributed to a 0.4-star increase in the motel’s Google rating.
                         Handled an average of 25+ phone inquiries per shift, providing prompt and informative responses about motel services, pricing, and local recommendations.
